<resources>
    <string name="app_name">SoulSerenity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">open</string>
    <string name="close">close\n</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="or_login_with">----or Login with----</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account ? Signup</string>
    <string name="soul_serenity">SOUL SERENITY</string>
    <string name="change_profile">Change Profile</string>
    <string name="welcome">Welcome</string>
    <string name="daily_dose_of_motivation_n_not_yet_uploaded">Daily Dose of Motivation\n(Not yet uploaded)</string>
    <string name="transform_your_life_with_mudramind">Transform your life with MudraMind!</string>
    <string name="mudras">Mudras</string>
    <string name="motivation">Motivation</string>
    <string name="meditation">Meditation</string>
    <string name="activities">Activities</string>
    <string name="daily_thoughts">Daily Thoughts</string>
    <string name="contact_us">Contact Us</string>
    <string name="meditational_videos">Meditational videos</string>
    <string name="motivational_videos">Motivational videos</string>
    <string name="apana_mudra">Apana Mudra</string>
    <string name="_1_duration">1. Duration : </string>
    <string name="practice_for_10_15_minutes_daily_nyou_can_extend_it_to_40_45_minutes_daily">Practice for 10-15 minutes daily.\nYou can extend it to 40-45 minutes Daily.</string>
    <string name="_2_steps_to_do">2. Steps to do :</string>
    <string name="find_a_comfortable_seated_position_either_on_the_floor_or_on_a_chair_with_your_back_straight_nrelax_your_hands_on_your_thighs_or_knees_palms_facing_upward_nbring_the_tips_of_your_middle_and_ring_fingers_to_touch_the_tip_of_your_thumb_while_keeping_your_index_and_little_fingers_extended_nmaintain_a_gentle_pressure_between_the_fingers_but_not_too_tight_nrest_your_hands_on_your_thighs_or_allow_them_to_relax_in_you">Find a comfortable seated position, either on the floor or on a chair, with your back straight.\nRelax your hands on your thighs or knees, palms facing upward.\nBring the tips of your middle and ring fingers to touch the tip of your thumb, while keeping your index and little fingers extended.\nMaintain a gentle pressure between the fingers, but not too tight.\nRest your hands on your thighs or allow them to relax in you.</string>
    <string name="_3_release">3. Release :</string>
    <string name="slowly_separate_your_fingers_and_let_your_hands_relax_naturally_nyou_can_shake_out_your_hands_or_roll_your_wrists_gently_after_releasing_the_mudra_ntake_a_moment_to_observe_any_changes_or_sensations_you_may_feel_in_your_body_and_mind_nbreathe_deeply_and_notice_how_the_practice_has_affected_you">Slowly separate your fingers and let your hands relax naturally.\nYou can shake out your hands or roll your wrists gently after releasing the mudra.\nTake a moment to observe any changes or sensations you may feel in your body and mind.\nBreathe deeply and notice how the practice has affected you.</string>
    <string name="_4_benefits">4. Benefits :</string>
    <string name="digestive_support_menstrual_and_reproductive_health_energy_flow_nbalances_energy_relieves_stress_promotes_stability">Digestive support, Menstrual and reproductive health, energy flow. \nBalances energy, relieves stress, promotes stability.</string>
    <string name="_5_important_note">5. Important Note :</string>
    <string name="digestive">Digestive support, Menstrual and reproductive health, energy flow. \nBalances energy, relieves stress, promotes stability.</string>
    <string name="_5_hindi_important_note">5. महत्वपूर्ण लेख :</string>
    <string name="_4_hindi_benefits">4. फ़ायदे :</string>
    <string name="_3_hindi_release">3. मुक्त करना :</string>
    <string name="_2_hindi_steps">2. सीढ़ी</string>
    <string name="_1_hindi_duration">1. अवधि :</string>
    <string name="_5_punjabi_important_note">5. ਮਹੱਤਵਪੂਰਨ ਨੋਟ:</string>
    <string name="_4_punjabi_benefits">4. ਲਾਭ :</string>
    <string name="_3_pun_release">3. ਰਿਲੀਜ਼:</string>
    <string name="_2_pun_steps">2. ਕਦਮ :</string>
    <string name="_1_pun_duration">1. ਮਿਆਦ:</string>
    <string name="enter_the_otp_we_sent_you_on_nthe_following_email">Enter the OTP we sent you on \nthe following email</string>
    <string name="didn_t_receive_the_otp_resend_otp">Didn\'t receive the OTP ? Resend OTP</string>
    <string name="verify">VERIFY</string>
    <string name="select_profile">Select Profile</string>
    <string name="next">NEXT</string>
    <string name="signup">SignUp</string>
    <string name="sign_up_to_discover_amazing_things_around_you">Sign Up to discover amazing things around you</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title">Title</string>
    <string name="link">link</string>
    <string name="_16_6_2023">16-6-2023</string>
    <string name="daily_motivation_video">Daily motivation video</string>
    <string name="stress">Stress</string>
    <string name="japnoor_singh">Japnoor Singh</string>
    <string name="sjapnoor11_gmail_com">sjapnoor11@gmail.com</string>
    <string name="about_us">About Us</string>
    <string name="madhav_sewa_society">Madhav Sewa Society</string>
    <string name="madhav_sewa_society_is_a_non_governmental_organization_ngo_dedicated_to_making_a_positive_impact_on_the_lives_of_disabled_individuals_and_children_in_need_founded_with_a_vision_of_fostering_inclusivity_and_providing_educational_opportunities_the_organization_strives_to_create_a_society_where_every_person_regardless_of_their_abilities_can_lead_a_fulfilling_life">Madhav Sewa Society is a non-governmental organization (NGO) dedicated to making a positive impact on the lives of disabled individuals and children in need. Founded with a vision of fostering inclusivity and providing educational opportunities, the organization strives to create a society where every person, regardless of their abilities, can lead a fulfilling life.</string>
    <string name="helping_disabled_individuals">1. Helping Disabled Individuals : </string>
    <string name="madhav_sewa_society_is_committed_to_supporting_disabled_individuals_by_offering_a_range_of_services_and_initiatives_their_primary_focus_is_on_improving_the_quality_of_life_for_people_with_disabilities_through_various_means_the_organization_provides_access_to_medical_resources_rehabilitation_programs_and_assistive_devices_to_enhance_mobility_and_independence_they_also_offer_counseling_and_emotional_support_to_individuals_and_their_families_recognizing_the_importance_of_mental_well_being_in_the_overall_development_and_empowerment_of_disabled_persons">Madhav Sewa Society is committed to supporting disabled individuals by offering a range of services and initiatives. Their primary focus is on improving the quality of life for people with disabilities through various means. The organization provides access to medical resources, rehabilitation programs, and assistive devices to enhance mobility and independence. They also offer counseling and emotional support to individuals and their families, recognizing the importance of mental well-being in the overall development and empowerment of disabled persons.</string>
    <string name="free_tuition_classes">2. Free Tuition Classes : </string>
    <string name="recognizing_the_significance_of_education_in_shaping_a_bright_future_madhav_sewa_society_runs_free_tuition_classes_for_children_from_underprivileged_backgrounds_these_classes_aim_to_bridge_the_educational_gap_and_provide_equal_opportunities_for_academic_growth_qualified_and_dedicated_teachers_volunteer_their_time_to_deliver_high_quality_education_to_students_helping_them_build_a_strong_foundation_of_knowledge_and_skills">Recognizing the significance of education in shaping a bright future, Madhav Sewa Society runs free tuition classes for children from underprivileged backgrounds. These classes aim to bridge the educational gap and provide equal opportunities for academic growth. Qualified and dedicated teachers volunteer their time to deliver high-quality education to students, helping them build a strong foundation of knowledge and skills.</string>
    <string name="_3_celebrating_all_festivals">3. Celebrating All Festivals :</string>
    <string name="madhav_sewa_society_strongly_believes_in_the_spirit_of_inclusivity_and_unity_the_organization_celebrates_all_festivals_regardless_of_religious_or_cultural_backgrounds_promoting_harmony_and_respect_among_community_members_through_festive_celebrations_they_create_an_environment_that_fosters_understanding_empathy_and_appreciation_for_diversity_these_events_bring_together_individuals_from_different_walks_of_life_promoting_social_cohesion_and_spreading_joy_and_happiness_among_participants">Madhav Sewa Society strongly believes in the spirit of inclusivity and unity. The organization celebrates all festivals, regardless of religious or cultural backgrounds, promoting harmony and respect among community members. Through festive celebrations, they create an environment that fosters understanding, empathy, and appreciation for diversity. These events bring together individuals from different walks of life, promoting social cohesion and spreading joy and happiness among participants.</string>
    <string name="_4_volunteer_and_donation_opportunities">4. Volunteer and Donation Opportunities :</string>
    <string name="madhav_sewa_society_encourages_individuals_who_share_their_passion_for_helping_others_to_join_their_volunteer_program_volunteers_play_a_vital_role_in_the_organization_s_activities_contributing_their_time_skills_and_compassion_to_make_a_difference_in_the_lives_of_those_in_need_the_organization_also_welcomes_donations_from_generous_individuals_and_organizations_which_help_sustain_and_expand_their_initiatives_reach_a_wider_audience_and_make_a_greater_impact">Madhav Sewa Society encourages individuals who share their passion for helping others to join their volunteer program. Volunteers play a vital role in the organization\'s activities, contributing their time, skills, and compassion to make a difference in the lives of those in need. The organization also welcomes donations from generous individuals and organizations, which help sustain and expand their initiatives, reach a wider audience, and make a greater impact.</string>
    <string name="_5_making_a_difference_together">4. Making a Difference Together :</string>
    <string name="madhav_sewa_society_believes_that_collective_efforts_can_bring_about_significant_change_by_focusing_on_the_empowerment_of_disabled_individuals_and_providing_free_tuition_classes_to_children_they_are_building_a_strong_foundation_for_a_more_inclusive_and_educated_society_their_dedication_to_celebrate_all_festivals_promotes_unity_and_understanding_fostering_an_environment_of_harmony_and_acceptance_madhav_sewa_society_invites_everyone_to_join_hands_and_contribute_to_their_noble_cause_creating_a_brighter_future_for_all"><![CDATA[Madhav Sewa Society believes that collective efforts can bring about significant change. By focusing on the empowerment of disabled individuals and providing free tuition classes to children, they are building a strong foundation for a more inclusive and educated society. Their dedication to celebrate all festivals promotes unity and understanding, fostering an environment of harmony and acceptance. Madhav Sewa Society invites everyone to join hands and contribute to their noble cause, creating a brighter future for all.]]></string>
    <string name="vivek_joshi">Vivek Joshi</string>
</resources>