<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".mudra.MudraEnglishTabFragment">

            <ImageView
                android:id="@+id/img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/apana" />

            <TextView
                android:id="@+id/titleMudra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/mudras"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/definition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/_1_pun_duration"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/practice_for_10_15_minutes_daily_nyou_can_extend_it_to_40_45_minutes_daily"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/_2_pun_steps"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/find_a_comfortable_seated_position_either_on_the_floor_or_on_a_chair_with_your_back_straight_nrelax_your_hands_on_your_thighs_or_knees_palms_facing_upward_nbring_the_tips_of_your_middle_and_ring_fingers_to_touch_the_tip_of_your_thumb_while_keeping_your_index_and_little_fingers_extended_nmaintain_a_gentle_pressure_between_the_fingers_but_not_too_tight_nrest_your_hands_on_your_thighs_or_allow_them_to_relax_in_you"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/_3_pun_release"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/release"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/slowly_separate_your_fingers_and_let_your_hands_relax_naturally_nyou_can_shake_out_your_hands_or_roll_your_wrists_gently_after_releasing_the_mudra_ntake_a_moment_to_observe_any_changes_or_sensations_you_may_feel_in_your_body_and_mind_nbreathe_deeply_and_notice_how_the_practice_has_affected_you"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/_4_punjabi_benefits"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/benfits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/digestive_support_menstrual_and_reproductive_health_energy_flow_nbalances_energy_relieves_stress_promotes_stability"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/_5_punjabi_important_note"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/digestive"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</layout>