<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/loginPageDesign"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:background="@drawable/login_page_design"
                android:orientation="vertical" >

                <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/soul_serenity"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:layout_margin="10dp"/>


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_alignBottom="@id/loginPageDesign"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="-200dp"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/login"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:autofillHints="emailAddress"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/edit_text"
                        app:passwordToggleEnabled="true">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLength="6"
                            android:maxLines="1"
                            android:autofillHints="password" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/forgotPassword"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="25dp"
                        android:gravity="end"
                        android:text="@string/forgot_password"
                        android:textColor="@color/red"
                        android:textSize="15sp" />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="40dp"
                        android:background="@drawable/button_bg"
                        android:foreground="?attr/selectableItemBackground"
                        android:text="@string/login" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/or_login_with"
                        android:textColor="#AFAEAE"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/google"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_marginEnd="10dp"
                            android:foreground="?attr/selectableItemBackground"
                            android:src="@drawable/google_icon" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvSignUp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:foreground="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:text="@string/don_t_have_an_account_signup"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>
    </ScrollView>
</layout>